# miEntorno

./: .env  .env.example  .gitignore  CAMBIOS_REALIZADOS.md  GUIA_RAPIDA.md  IMPLEMENTACION_COMPLETADA.md  README.md  README_SETUP.md  main.py  pyproject.toml  setup_database.py
src/: main.py
src/config/: themes.py
src/controllers/: tareacontroller.py  usercontroller.py
src/database/: tareas.sql
src/mientorno.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/models/: databaseModel.py  schemasModely.py  tareasModel.py  userModel.py
src/views/: Tareaview.py  dashboardView.py  loginView.py  recoveryView.py
